# originREVO

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: build.yml
config/: dataset_tum1.yaml
datastructures/: camerapyr.h  imgpyramidrgbd.cpp  imgpyramidrgbd.h
gui/: MapDrawer.cc  MapDrawer.h  PointCloudBuffered.h  Viewer.cc  Viewer.h
io/: iowrapperRGBD.cpp  iowrapperRGBD.h
pidinet/: pidinet.cpp  pidinet.h
scripts/: associate.py  evaluate_ate.py
system/: optimizer.cpp  optimizer.h  system.cpp  system.h  tracker.cpp  tracker.h
utils/: LGSX.h  Logging.cpp  Logging.h  timer.h
